--- a/template.yaml
+++ b/template.yaml
@@ -1,10 +1,10 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: The Adventure of NomNom
+Description: Checkpoint 4
 
 Parameters:
-  MyParameter:
-    Type: AWS::SSM::Parameter::Value<String>
-    Default: arn:aws:ssm:eu-west-2/:12345678912:document/demoooo/arn/topics/topic1                 #'my parameter value'             #'{{ssm:checkpoint4}}'
+#  MyParameter:
+#    Type: AWS::SSM::Parameter::Value<String>
+#    Default: #  arn:aws:ssm:eu-west-2/ 'my parameter value''{{ssm:checkpoint4}}'
   LatestAmiId:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
     Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
@@ -183,15 +183,6 @@ Resources:
         Ref: MyPublicSubnet
       RouteTableId:
         Ref: MyRouteTable
-
-
-
-
-  KatinParameter:
-    Type: AWS::SSM::Parameter
-    Properties:
-      Type: String
-      Value: !GetAtt KatinBucket.Arn
 
 
 
